<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>panda_gripper_action_client</name>
  <version>0.0.0</version>
  <description>A minimal action client for Franka Emika Panda gripper.</description>

  <maintainer email="peterdavidfagan@gmail.com">Peter David Fagan</maintainer>
  <license>Apache License 2.0</license>

  <author email="peterdavidfagan@gmail.com">Peter David Fagan</author>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>franka_msgs</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

